Agregado el formulario para actualizar informacion y pasando indice por URL

--- a/src/app/projects-component/projects-component.component.html
+++ b/src/app/projects-component/projects-component.component.html
@@ -1,6 +1,7 @@
-<p>projects-component works!</p>
 
-<form class="form-group row" id="miForm">
+
+<div class="container">
+  <form class="form-group row" id="miForm">
   
     <div class="form-group col-md-3">
 
@@ -31,6 +32,8 @@
     </div>
 
   </form>
+
+  </div>
 
 <div style="text-align: center;">
 
