--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-light">
 
   <!-- Links -->
-  <ul class="navbar-nav">
+  <ul class="navbar-nav" style="margin: auto;">
     <li class="nav-item">
       <a class="nav-link" routerLink="">Home</a>
     </li>
