Agregado boton de eliminar

--- a/src/app/actualiza-component/actualiza-component.component.html
+++ b/src/app/actualiza-component/actualiza-component.component.html
@@ -26,7 +26,9 @@
       </div>
   
       <div class="col">
-        <button type="submit" class="btn btn-primary" (click)="actualizarEmpleado()" style="margin-top: 25px;">Actualizar</button>
+        <button type="submit" class="btn btn-primary" (click)="actualizarEmpleado()" style="margin-top: 25px; margin-right: 30px;">Actualizar</button>
+
+        <button type="submit" class="btn btn-primary" (click)="eliminarEmpleado()" style="margin-top: 25px;">Eliminar</button>
       </div>
   
     </form>
