--- a/src/app/actualiza-component/actualiza-component.component.html
+++ b/src/app/actualiza-component/actualiza-component.component.html
@@ -26,11 +26,17 @@
       </div>
   
       <div class="col">
-        <button type="submit" class="btn btn-primary" (click)="actualizarEmpleado()" style="margin-top: 25px; margin-right: 30px;">Actualizar</button>
+        <button type="submit" class="btn btn-success" (click)="accionEmpleado()" style="margin-top: 25px; margin-right: 30px;">Accion</button>
 
-        <button type="submit" class="btn btn-primary" (click)="eliminarEmpleado()" style="margin-top: 25px;">Eliminar</button>
+        <!--<button type="submit" class="btn btn-primary" (click)="eliminarEmpleado()" style="margin-top: 25px;">Eliminar</button>-->
       </div>
   
     </form>
   
+</div>
+
+<div style="text-align: center;">
+
+  <button class="btn btn-success" (click) ="volverHome()">Ir a Inicio</button>
+
 </div>
