--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -33,7 +33,7 @@
       </div>
   
       <div class="col">
-        <button type="submit" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 25px;">Agregar</button>
+        <button type="submit" class="btn btn-success" (click)="agregarEmpleado()" style="margin-top: 25px;">Agregar</button>
       </div>
   
     </form>
