--- a/src/app/projects-component/projects-component.component.html
+++ b/src/app/projects-component/projects-component.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="col">
-      <button type="submit" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 25px;">Agregar</button>
+      <button type="submit" class="btn btn-success" (click)="agregarEmpleado()" style="margin-top: 25px;">Agregar</button>
     </div>
 
   </form>
@@ -36,6 +36,6 @@
 
 <div style="text-align: center;">
 
-    <button class="btn btn-primary" (click) ="volverHome()">Ir a Inicio</button>
+    <button class="btn btn-success" (click) ="volverHome()">Ir a Inicio</button>
 
 </div>
