Eliminado el componente de Actualizar y reemplazado por Accion-Component

--- a/src/app/accion-component/accion-component.component.html
+++ b/src/app/accion-component/accion-component.component.html
@@ -26,7 +26,7 @@
       </div>
   
       <div class="col">
-        <button type="submit" class="btn btn-success" (click)="accionEmpleado()" style="margin-top: 25px; margin-right: 30px;">Accion</button>
+        <button type="button" class="btn btn-primary" (click)="accionEmpleado()">{{nombreBoton}}</button>
 
         <!--<button type="submit" class="btn btn-primary" (click)="eliminarEmpleado()" style="margin-top: 25px;">Eliminar</button>-->
       </div>
@@ -37,6 +37,6 @@
 
 <div style="text-align: center;">
 
-  <button class="btn btn-success" (click) ="volverHome()">Ir a Inicio</button>
+  <button class="btn btn-primary" (click) ="volverHome()">Ir a Inicio</button>
 
 </div>
