--- a/src/app/caracteristicas-empleado-c/caracteristicas-empleado-c.component.html
+++ b/src/app/caracteristicas-empleado-c/caracteristicas-empleado-c.component.html
@@ -1,3 +1,3 @@
 <label>Caracteristica: </label> &nbsp; &nbsp;
 <input type="text" #nuevaCaracteristica id="input-caracteristica" [(ngModel)] = "input_caracteristica"> &nbsp; &nbsp;
-<button (click)="agregaCaracteristicas(nuevaCaracteristica.value)" class="btn btn-success">Agregar Característica</button>
+<button (click)="agregaCaracteristicas(nuevaCaracteristica.value)" class="btn btn-primary">Agregar Característica</button>
