--- a/src/app/empleado-hijo-c/empleado-hijo-c.component.html
+++ b/src/app/empleado-hijo-c/empleado-hijo-c.component.html
@@ -7,7 +7,7 @@
 
           &nbsp;&nbsp;
 
-          <a [routerLink]="['/actualiza', indice]" [queryParams]="{accion:'1'}" title="Click para actualizar empleado">
+          <a [routerLink]="['/accion', indice]" [queryParams]="{accion:'1'}" title="Click para actualizar empleado">
               
             Actualizar
 
@@ -15,7 +15,7 @@
 
           &nbsp;&nbsp;
 
-          <a [routerLink]="['/actualiza', indice]" [queryParams]="{accion:'2'}" title="Click para eliminar empleado">
+          <a [routerLink]="['/accion', indice]" [queryParams]="{accion:'2'}" title="Click para eliminar empleado">
               
             Eliminar
 
