--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,6 +1,6 @@
 
   <div class="container">
-    <div class="col" style="text-align: center;">
+    <div class="titulo">
       <h1>{{titulo}}</h1>
     </div>
   
@@ -33,7 +33,7 @@
       </div>
   
       <div class="col">
-        <button type="submit" class="btn btn-success" (click)="agregarEmpleado()" style="margin-top: 25px;">Agregar</button>
+        <button type="submit" class="btn btn-primary" (click)="agregarEmpleado()">Agregar</button>
       </div>
   
     </form>
